--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-form-stepper": "^2.0.3",
+    "react-loading-skeleton": "^3.3.1",
     "styled-components": "^6.0.7",
     "yup": "^1.1.1"
   },
