--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-form-stepper": "^2.0.3",
     "react-loading-skeleton": "^3.3.1",
     "styled-components": "^6.0.7",
+    "swiper": "^10.3.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
