--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+NEXT_PUBLIC_SEMPRE_INSTITUCIONAL_URL=https://sempre-tecnologia-git-feature-new-version-victormagal.vercel.app
 NEXT_PUBLIC_GRAPHQL_URL=http://localhost:1337/graphql
