feat: atualiza enviroment variables

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SEMPRE_INSTITUCIONAL_URL=https://sempre-tecnologia-git-feature-new-version-victormagal.vercel.app
+NEXT_PUBLIC_SEMPRE_INSTITUCIONAL_URL=http://localhost:8080
 NEXT_PUBLIC_GRAPHQL_URL=http://localhost:1337/graphql
