--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+NEXT_PUBLIC_URL=http://localhost:3000
 NEXT_PUBLIC_SEMPRE_INSTITUCIONAL_URL=http://localhost:8080
 NEXT_PUBLIC_GRAPHQL_URL=http://localhost:1337/graphql
